[tool.poetry]
name = "rsagent"
version = "0.0.1"
description = "48 IX Route Server Agent"
authors = ["checktheroads <matt@48ix.net>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7.3"
pydantic = "^1.6.1"
rpyc = "^4.1.5"
loguru = "^0.5.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8-black = "^0.2.1"
isort = "^5.5.2"
flake8-isort = "^4.0.0"
flake8 = "^3.8.3"
mypy = "^0.782"
mccabe = "^0.6.1"
bandit = "^1.6.2"
pep8-naming = "^0.11.1"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
